<resources>
    <string name="app_name">Mi Primera App JE</string>
    <string name="login">Ingresar</string>
    <string name="curso_kotlin">Curso Kotlin</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="ingrese_su_usuario">Ingrese su usuario</string>
    <string name="logo_app">Logo App</string>
    <string name="correo_electronico">correo electronico</string>
    <string name="password">********</string>
</resources>